<resources>
    <string name="English">English</string>
    <string name="_7daysfree">7daysfree</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_hoichoi">About Hoichoi</string>
    <string name="account_route">Account</string>
    <string name="account_settings">Account Settings</string>
    <string name="activate_tV">Activate TV</string>
    <string name="add_card_pay">Add Card &amp; Pay</string>
    <string name="additional_fees_colon">Additional Fees:</string>
    <string name="alert">Alert</string>
    <string name="allow_access">Allow Access</string>
    <string name="already_registered_so_verify">You are already register in our system, So please verify your <b>mobile number</b></string>
    <string name="amount_colon">Amount:</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_cms_entitlement_api_url">%1$s/entitlement/video/status?id=%2$s&amp;deviceId=%3$s&amp;deviceType=%4$s&amp;contentConsumption=%5$s</string>
    <string name="app_cms_image_with_resize_query">%1$s?impolicy=resize&amp;w=%2$d&amp;h=%3$d</string>
    <string name="app_cms_search_api_url">%1$s/search/v1?site=%2$s&amp;searchTerm=%3$s&amp;languageCode=%4$s</string>
    <string name="app_cms_search_api_url_video_only">%1$s/search/v1?site=%2$s&amp;searchTerm=%3$s&amp;types=%4$s&amp;languageCode=%5$s</string>
    <string name="app_cms_search_api_url_with_types">%1$s/search/v1?site=%2$s&amp;searchTerm=%3$s&amp;languageCode=%4$s&amp;types=%5$s&amp;countryCode=%6$s</string>
    <string name="app_cms_signin_api_url">%1$s/identity/signin?platform=%2$s&amp;device=%3$s&amp;site=%4$s&amp;deviceId=%5$s&amp;deviceName=%6$s</string>
    <string name="app_cms_signout_api_url">%1$s/identity/signout?site=%2$s&amp;platform=%3$s&amp;deviceId=%4$s&amp;deviceName=%5$s</string>
    <string name="app_language">App Language</string>
    <string name="app_name">hoichoi</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="articleDetail01">articleDetail01</string>
    <string name="articleFeed01">articleFeed01</string>
    <string name="articleGrid01">articleGrid01</string>
    <string name="articleTray01">articleTray01</string>
    <string name="audioDetail01">audioDetail01</string>
    <string name="audioTray01">audioTray01</string>
    <string name="authentication01">authentication01</string>
    <string name="authentication01_activate_device">authentication01_activate_device</string>
    <string name="authentication02">authentication02</string>
    <string name="authentication03">authentication03</string>
    <string name="authentication04">authentication04</string>
    <string name="authentication05">authentication05</string>
    <string name="authentication07">authentication07</string>
    <string name="authentication08">authentication08</string>
    <string name="authentication09">authentication09</string>
    <string name="authentication10">authentication10</string>
    <string name="authentication11">authentication11</string>
    <string name="authentication12">authentication12</string>
    <string name="authentication14">authentication14</string>
    <string name="authentication17">authentication17</string>
    <string name="auto">Auto</string>
    <string name="autoPlay01">autoPlay01</string>
    <string name="autoPlay02">autoPlay02</string>
    <string name="autoPlay03">autoPlay03</string>
    <string name="autoPlay04">autoPlay04</string>
    <string name="autoplay">Autoplay</string>
    <string name="avail_emi">Avail EMI</string>
    <string name="banner01">banner01</string>
    <string name="banner02">banner02</string>
    <string name="bannerAd01">bannerAd01</string>
    <string name="beckn_version">1.0rc1</string>
    <string name="beta_assets">false</string>
    <string name="billing_history">Billing History</string>
    <string name="boostSelectPlan01">boostSelectPlan01</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brandTray01">brandTray01</string>
    <string name="browseByArtistsTray">browseByArtistsTray</string>
    <string name="browsebyartist">browsbyartist</string>
    <string name="build_version">20</string>
    <string name="bundleDetail01">bundleDetail01</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="card">CARD</string>
    <string name="card_digit">16 Digit Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_list_api_url">%1$s/subscription/card?customer_id=%2$s</string>
    <string name="card_number">Card Number</string>
    <string name="cards">CARDS</string>
    <string name="carousel01">carousel01</string>
    <string name="carousel02">carousel02</string>
    <string name="carousel03">carousel03</string>
    <string name="carousel04">carousel04</string>
    <string name="carousel05">carousel05</string>
    <string name="carousel07">carousel07</string>
    <string name="categoryDetail01">categoryDetail01</string>
    <string name="categoryDetail02">categoryDetail02</string>
    <string name="ccp_title">Select a Country</string>
    <string name="change_card">Change Card</string>
    <string name="change_email">Change Email</string>
    <string name="change_number">Change Number</string>
    <string name="change_password">Change Password</string>
    <string name="change_plan">Change Plan</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checkout_remotes_version">2.0rc1</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_payment_option">Choose a payment option</string>
    <string name="choose_your_bank">Choose your Bank</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="config_location">https://assets.juspay.in/juspay/payments/2.0/release/v1-config.zip</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="confirm_title">Confirm</string>
    <string name="contactUs01">contactUs01</string>
    <string name="contactUs02">contactUs02</string>
    <string name="container75">container75</string>
    <string name="contentBlock01">contentBlock01</string>
    <string name="contentRatingWarning01">contentRatingWarning01</string>
    <string name="continueWatching01">continueWatching01</string>
    <string name="continueWatching02">continueWatching02</string>
    <string name="continueWatching03">continueWatching03</string>
    <string name="continue_title">Continue</string>
    <string name="continuewatching">continuewatching</string>
    <string name="copy_URL">Copy URL</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="createPassword01">createPassword01</string>
    <string name="cvc">CVC/CVV</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="enter_expire_date">MM/YY</string>
    <string name="enter_mobile_number">Enter Your Mobile Number</string>
    <string name="guest">Guest</string>
    <string name="juspay_loader">loader</string>
    <string name="juspay_processing_your_payment">Processing your payment</string>
    <string name="juspay_safe">Juspay Safe</string>
    <string name="my_cards">My Cards</string>
    <string name="other_cards">Other Cards</string>
    <string name="registered_so_verify">Please verify your <b>mobile number</b></string>
    <string name="remember_me">Remember Me</string>
    <string name="remember_me_warning">By clicking the remember me, you agree to our <font color="#EF6C00">Terms &amp; Conditions</font></string>
    <string name="skip_this_step">Skip This Step</string>
    <string name="verify">Verify</string>
    <string name="welcome_coma">Welcome,</string>
</resources>