<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/loader" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@drawable/juspay_icon" android:contentDescription="@string/juspay_loader" />
    <TextView android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/juspay_processing_your_payment" />
    <ImageView android:layout_width="wrap_content" android:layout_height="10.0dip" android:layout_marginTop="20.0dip" android:src="@drawable/juspay_safe" android:contentDescription="@string/juspay_safe" />
</LinearLayout>