<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/layout_enter_mobile_number" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:gravity="center_horizontal" android:id="@id/tv_welcome" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/welcome_coma" />
        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:textStyle="bold" android:gravity="center_horizontal" android:id="@id/tv_customer_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/guest" />
        <View android:background="@color/very_light_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="25.0dip" />
        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:textColor="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:layout_marginBottom="15.0dip" android:text="@string/already_registered_so_verify" />
        <LinearLayout android:orientation="horizontal" android:background="@drawable/border_color_selector_sslc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip">
            <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext android:textSize="14.0sp" android:textStyle="bold" android:layout_gravity="center" android:id="@id/et_mobile_number_ssl" android:background="@android:color/transparent" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="Enter Your Mobile Number" android:maxLength="11" android:layout_weight="6.0" android:inputType="number" android:imeOptions="actionNext" />
            <ImageView android:id="@id/country_iv" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:src="@drawable/bangladesh_sslc" android:layout_weight="1.0" />
            <Button android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_verify" android:background="@drawable/custom_btn_clementine" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/verify" android:layout_weight="2.0" android:textAllCaps="false" />
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:id="@id/tv_change_numeber" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/change_number" />
            <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:id="@id/tv_skip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/skip_this_step" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>