<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="15.0dip" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView android:id="@id/scrollView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:id="@id/layout_card_info" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@id/layout_card_field" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <ImageView android:id="@id/iv_card_visa" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/ic_visa_new" />
                        <ImageView android:id="@id/iv_card_master" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/ic_mastercard_new" android:layout_toRightOf="@id/iv_card_visa" />
                        <ImageView android:id="@id/iv_card_amex" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/ic_amex_new" android:layout_toRightOf="@id/iv_card_master" />
                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:textColor="@color/tabBackground" android:id="@id/tv_other_cards" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/other_cards" android:layout_alignParentRight="true" android:layout_centerInParent="true" />
                    </RelativeLayout>
                    <LinearLayout android:orientation="horizontal" android:background="@drawable/rectangular_corner_shape_round_transperent_inside_sslc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext android:textSize="14.0sp" android:id="@id/et_card_number_ssl" android:background="@android:color/transparent" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/enter_card_number" android:maxLength="19" android:layout_weight="6.0" android:inputType="number" android:imeOptions="actionNext" android:textCursorDrawable="@null" />
                        <LinearLayout android:orientation="horizontal" android:id="@id/layout_emi_info" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="3.0">
                            <ImageView android:layout_gravity="center" android:id="@id/iv_emi_info" android:padding="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_info_sslc" />
                            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layout_emi" android:background="@drawable/custom_btn_clementine" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                                <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:textSize="@dimen/emi_text_size" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_avail_emi" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/avail_emi" />
                                <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center" android:layout_width="10.0dip" android:layout_height="10.0dip" android:layout_marginLeft="8.0dip" android:src="@drawable/ic_back_sslc" android:tint="@color/white" android:rotation="270.0" app:tint="@color/white" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:id="@id/layout_card_offer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_offer_sslc" />
                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:layout_gravity="center" android:id="@id/tv_offer_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="---" />
                    </LinearLayout>
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext android:textSize="14.0sp" android:id="@id/et_card_expiry_date" android:background="@drawable/rectangular_corner_shape_round_transperent_inside_sslc" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="60.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="40.0dip" android:hint="@string/enter_expire_date" android:maxLength="5" android:layout_alignParentLeft="true" android:inputType="date" android:imeOptions="actionNext" />
                        <LinearLayout android:orientation="horizontal" android:background="@drawable/rectangular_corner_shape_round_transperent_inside_sslc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_alignParentRight="true">
                            <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext android:textSize="14.0sp" android:id="@id/et_card_cvc_cvv" android:background="@android:color/transparent" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:hint="@string/cvc" android:maxLength="4" android:inputType="numberPassword" android:imeOptions="actionNext" />
                            <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:src="@drawable/ic_cvc_sslc" />
                        </LinearLayout>
                    </RelativeLayout>
                    <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext android:textSize="14.0sp" android:id="@id/et_card_holder_name_ssl" android:background="@drawable/rectangular_corner_shape_round_transperent_inside_sslc" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:hint="@string/card_holder_name" android:inputType="textCapSentences" android:imeOptions="actionDone" />
                    <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:textColor="@color/colorPrimary" android:id="@id/tv_my_cards" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/my_cards" />
                    <LinearLayout android:layout_gravity="end" android:orientation="vertical" android:background="@drawable/rectangular_corner_shape_round_gallery_inside_sslc" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
                        <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <CheckBox android:id="@id/remember_me_cv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remember_me" />
                            <View android:id="@id/view1" android:background="@color/very_light_grey" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="20.0dip" android:layout_marginRight="10.0dip" android:layout_toLeftOf="@id/iv_more_info" android:layout_centerVertical="true" />
                            <ImageView android:id="@id/iv_more_info" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/help" android:layout_alignParentRight="true" />
                        </RelativeLayout>
                        <View android:background="@color/very_light_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="15.0dip" />
                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:id="@id/tv_term_condition" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/remember_me_warning" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/layout_card_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
                    <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:id="@id/tv_registered" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:layout_marginBottom="15.0dip" android:text="@string/registered_so_verify" />
                    <LinearLayout android:orientation="horizontal" android:background="@drawable/border_color_selector_sslc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip">
                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext android:textSize="14.0sp" android:textStyle="bold" android:layout_gravity="center" android:id="@id/et_card_mobile_number" android:background="@android:color/transparent" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/enter_mobile_number" android:maxLength="11" android:layout_weight="6.0" android:inputType="number" android:imeOptions="actionNext" />
                        <ImageView android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:src="@drawable/bangladesh_sslc" android:layout_weight="1.0" />
                        <Button android:enabled="false" android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_card_mobile_verify" android:background="@drawable/custom_btn_clementine" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/verify" android:layout_weight="2.0" android:textAllCaps="false" />
                    </LinearLayout>
                    <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:textColor="@color/colorPrimary" android:id="@id/tv_card_mobile_format" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip" android:text="Ex. 01XXXXXXXXX" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/layout_other_cards" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:gravity="center" android:id="@id/iv_other_cards_go_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_backk" android:layout_centerInParent="true" />
                    <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_other_cards" android:paddingBottom="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/layout_save_cards" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_save_cards" android:paddingBottom="45.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/layout_mobile_otp" android:background="@color/white" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@id/layout_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
                    <LinearLayout android:orientation="vertical" android:id="@id/layout_welcome_back" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:gravity="center_horizontal" android:id="@id/tv_welcome" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/welcome_coma" />
                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:textStyle="bold" android:gravity="center_horizontal" android:id="@id/tv_customer_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/guest" />
                        <View android:background="@color/very_light_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="25.0dip" />
                    </LinearLayout>
                    <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:id="@id/tv_already_registered" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:layout_marginBottom="15.0dip" android:text="@string/already_registered_so_verify" />
                    <LinearLayout android:orientation="horizontal" android:background="@drawable/border_color_selector_sslc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip">
                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomEdittext android:textSize="14.0sp" android:textStyle="bold" android:layout_gravity="center" android:id="@id/et_mobile_number_ssl" android:background="@android:color/transparent" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="Enter Your Mobile Number" android:maxLength="11" android:layout_weight="6.0" android:inputType="number" android:imeOptions="actionNext" />
                        <ImageView android:id="@id/country_iv" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:src="@drawable/bangladesh_sslc" android:layout_weight="1.0" />
                        <Button android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_verify" android:background="@drawable/custom_btn_clementine" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/verify" android:layout_weight="2.0" android:textAllCaps="false" />
                    </LinearLayout>
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip">
                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:textColor="@color/colorPrimary" android:id="@id/tv_change_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change_number" />
                        <com.sslwireless.sslcommerzlibrary.view.custom.SSLCCustomTextView android:textColor="@color/colorPrimary" android:id="@id/tv_skip_login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/skip_this_step" android:layout_alignParentRight="true" />
                    </RelativeLayout>
                </LinearLayout>
                <include layout="@layout/layout_otp_sslc" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>